[project]
name = "bball1"
version = "0.1.0"
description = ""
authors = [
    {name = "gaulight42@gmail.com",email = "gaulight42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpyro (>=0.17.0,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
